# NanobindExample

./: .clang-tidy  .clangd  .codespellrc  .env.in  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  LICENSE  ProjectOptions.cmake  README.md  README_building.md  README_dependencies.md  README_setup.md  conanfile.txt  cspell.json  index.html  pyproject.toml  requirements.txt
.github/workflows/: slides.yml  wheels.yml
Source/: CMakeLists.txt
Source/my_cpp_library/: CMakeLists.txt
Source/my_cpp_library/include/my_cpp_library/: calculations.h
Source/my_cpp_library/src/: calculations.cpp
cmake/: Cache.cmake  CompilerWarnings.cmake  Doxygen.cmake  FindPyArrow.cmake  Hardening.cmake  InterproceduralOptimization.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  lint.cmake  spell-targets.cmake  spell.cmake
configured_files/: config.hpp.in
docs/slides/: Dockerfile  index.html
python/: CMakeLists.txt  bindings.cpp  spdlog_sink.hpp
python/src/NanobindExample/: __init__.py  logger.py
python/tests/: test_extension.py
test/: CMakeLists.txt
test/CompileTimeChecks/: CMakeLists.txt  concept_checks.cpp
test/UnitTests/: CMakeLists.txt  init_logger.cpp  init_logger.h  main.cpp  test_library.cpp
